Attempt to fix button text color on IOS 2

--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -17,7 +17,6 @@
 
 .btn-empty {
   color: $clr-text-dark;
-  -webkit-text-fill-color: $clr-text-dark;
   border: 2px solid $clr-accent;
   border-radius: 10px;
   background: none;
@@ -53,7 +52,6 @@
 
 .btn-filled {
   color: $clr-text-dark;
-  -webkit-text-fill-color: $clr-text-dark;
   border-color: transparent;
   border-radius: 10px;
   background: $clr-accent;
@@ -63,6 +61,7 @@
   @media screen and (max-width: 767px) {
     &:active {
       background-color: $clr-button-hover;
+
       color: $clr-text-light;
     }
     &:active .btn-icon {
